max-widths added to dash, expense breakdown list started, spacing issues

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -41,6 +41,13 @@
     justify-content: center;
     text-align: center;
 }
+#expense-article,
+#income-article{
+    max-width: 500px;
+}
+.goal-widget{
+    max-width: 700px;
+}
 .highlight-article > p{
     margin: unset;
 }
@@ -57,6 +64,7 @@
     justify-content: center;
     margin-top: 8px;
 }
+
 /*Highlight Cards Mobile*/
 @media screen and (max-width: 950px) {
     .highlights-container{
@@ -87,11 +95,13 @@
 /*Dash pie chart & expense section*/
 .dashboard-expense-chart-container {
     background-color: var(--foreground);
-    padding: 34px 76px;
-    margin: 0 150px 36px 150px;
-
+    padding: 36px 76px;
     border-radius: var(--border-radius);
-}
+    max-width: calc(100% - 360px); /* Adjust the max-width to accommodate the left & right margins */
+    margin: 0 auto; /* Center the section horizontally */
+  }
+  
+  
 .pie-chart-container{
     display: flex;
     justify-content: center;
@@ -106,7 +116,58 @@
     padding-bottom: 34px;
 }
 /*Expenses breakdown list*/
-.expense-list-container{
+.expense-item {
     display: flex;
+    align-items: center;
     justify-content: center;
+    margin-bottom: 1rem;
+  }
+  /*Space Circle from category name*/
+  .category-indicator {
+    margin-right: 12px;
+  }
+  /*Space apart evenly*/
+  .category-name,
+  .amount-spent,
+  .percentage {
+    flex: 1; 
+    
+  }
+  
+
+/*Pie chart & breakdown list Mobile*/
+@media screen and (max-width: 1200px) {
+    .data-wrapper{
+        grid-template-columns: 1fr;
+    }
+    .dashboard-expense-chart-container h4{
+        text-align: center;
+    }
+    .pie-chart-container{
+        margin-bottom: 32px;
+    }
+
 }
+@media screen and (max-width: 850px) {
+    .dashboard-expense-chart-container{
+       margin: 0 80px 36px 80px;
+
+    }
+   #pie-chart-placeholder {
+      width: 250px; 
+      height: 250px; 
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .dashboard-expense-chart-container{
+        margin: 0 30px 36px 30px;
+     }
+  }
+/*shrink pie chart for mobile*/
+  @media screen and (max-width: 420px) {
+    #pie-chart-placeholder {
+        width: 150px; 
+        height: 150px; 
+      }
+  }
+
