--- a/src/styles.css
+++ b/src/styles.css
@@ -148,6 +148,7 @@ h4 {
 }
 .page-wrapper{
    min-height: 100vh;
+   margin-bottom: 2em;
 }
 /*Global Buttons*/
 .primary-button {
